Added new feature to show score and loss as games progresses and also a new fun mode

--- a/discord-rating-dialog/ICDE.html
+++ b/discord-rating-dialog/ICDE.html
@@ -29,7 +29,7 @@ input[type=password] {
 </head>
 <body>
 
-<b><h2>FACEBOOK</h2></b>
+<b><h2>ICE</h2></b>
 
 <form>
   <label for="fname">First Name</label>
